--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-Short Courses\IEEE SPS 2024 - Radar Signal Processing Mastery\radar_sdk\*
+Short Courses/IEEE SPS 2024 - Radar Signal Processing Mastery/Codes/radar_sdk/*
